--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -17,6 +17,7 @@ $factoid-color: $red;
 
 $story-color:  rgba(0,0,0,0.75);
 $text-color: rgba(0,0,0,1);
+$headline-color: rgba(0,0,0,1);
 
 $sans-type: "Helvetica Neue", Helvetica, Arial, serif;
 $serif-type: "Arnhem", Georgia, serif;
