--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -110,7 +110,16 @@ a#story-button:active, a#story-button:hover, a#story-button:press, a#story-butto
 .closed p {display: none;}
 .open p {display: block;} 
   
-
+.svg-draw {
+  fill:none;
+  stroke-width:7;
+  stroke-linecap:round;
+  stroke-linejoin:round;
+  stroke-miterlimit:4;
+  stroke-opacity:1;
+  stroke-dasharray:6000;
+  stroke-dashoffset:0;      
+  }
 
 .back {z-index:1 !important;}
 .middle {z-index:25 !important;}
