--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -120,6 +120,8 @@ a#story-button:active, a#story-button:hover, a#story-button:press, a#story-butto
   stroke-dasharray:6000;
   stroke-dashoffset:0;      
   }
+  
+.drawing {position: absolute; z-index: 500; top: 300px; left 100px;}
 
 .back {z-index:1 !important;}
 .middle {z-index:25 !important;}
