--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -121,7 +121,7 @@ a#story-button:active, a#story-button:hover, a#story-button:press, a#story-butto
   stroke-dashoffset:0;      
   }
   
-.drawing {position: absolute; z-index: 500; top: 300px; left 100px;}
+.drawing {position: absolute; z-index: 500; top: 300px; left: 100px;}
 
 .back {z-index:1 !important;}
 .middle {z-index:25 !important;}
