body and html height @ 100%

--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -3,11 +3,13 @@
 
 html {
   background-color: #000;
+  height: 100%;
   }
   
 body {  
   width:$screen-width-px;
   background-color: pink;
+  height: 100%;
   }
   
 .page {
