--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -86,9 +86,16 @@ a#story-button:active, a#story-button:hover, a#story-button:press, a#story-butto
   
   }
       
-.cutout {
-  top:0px;    
-  img {width: 100%;}  
+.cutout img {
+  position: absolute;
+  top:0px; 
+  left: 0px;    
+  }
+  
+.drawing {
+  position: absolute;
+  top:100px; 
+  left: 300px; 
   }
 
 .back {z-index:1 !important;}
