--- a/styles/main.scss
+++ b/styles/main.scss
@@ -96,7 +96,13 @@ $last_scrollstart:      $last_onscreen + 900;
 #howto {
   -skrollr-animation-name:two-scroll;
   h1, h2, h3 {-skrollr-animation-name:two-title-transform;}   
+  } 
+  
+#howto {
+  -skrollr-animation-name:two-scroll;
+  h3 {-skrollr-animation-name:two-title-transform;}   
   }  
+
   
 #empty {
   -skrollr-animation-name:three-scroll;  
@@ -195,8 +201,8 @@ $last_scrollstart:      $last_onscreen + 900;
   }
   
 @-skrollr-keyframes three-title-transform {  
-  #{$three_onscreen} {color: rgba(0,0,0,1); margin-top:500px;}
-  #{$three_scrollstart} { color: rgba(255,0,0,1); margin-top:100px;}
+  #{$three_onscreen} {color: rgba(0,0,0,1); transform:rotate(0deg);}
+  #{$three_scrollstart} { color: rgba(255,0,0,1); transform:rotate(90deg);}
   }
   
 @-skrollr-keyframes two-title-transform {   
