--- a/styles/main.css
+++ b/styles/main.css
@@ -710,7 +710,7 @@ h3 {
 
 #cover {
   -skrollr-animation-name: one-scroll; }
-  #cover h1, #cover h2, #cover h3 {
+  #cover h1 {
     -skrollr-animation-name: one-title-transform; }
 
 #howto {
@@ -720,52 +720,52 @@ h3 {
 
 #empty {
   -skrollr-animation-name: three-scroll; }
-  #empty h1, #empty h2, #empty h3 {
+  #empty h2 {
     -skrollr-animation-name: three-title-transform; }
 
 #mother {
   -skrollr-animation-name: four-scroll; }
-  #mother h1, #mother h2, #mother h3 {
+  #mother h2 {
     -skrollr-animation-name: four-title-transform; }
 
 #queen {
   -skrollr-animation-name: five-scroll; }
-  #queen h1, #queen h2, #queen h3 {
+  #queen h2 {
     -skrollr-animation-name: five-title-transform; }
 
 #hunstman {
   -skrollr-animation-name: six-scroll; }
-  #hunstman h1, #hunstman h2, #hunstman h3 {
+  #hunstman h2 {
     -skrollr-animation-name: six-title-transform; }
 
 #dwarves {
   -skrollr-animation-name: seven-scroll; }
-  #dwarves h1, #dwarves h2, #dwarves h3 {
+  #dwarves h2 {
     -skrollr-animation-name: seven-title-transform; }
 
 #king {
   -skrollr-animation-name: eight-scroll; }
-  #king h1, #king h2, #king h3 {
+  #king h2 {
     -skrollr-animation-name: eight-title-transform; }
 
 #sin {
   -skrollr-animation-name: nine-scroll; }
-  #sin h1, #sin h2, #sin h3 {
+  #sin h2 {
     -skrollr-animation-name: nine-title-transform; }
 
 #prince {
   -skrollr-animation-name: ten-scroll; }
-  #prince h1, #prince h2, #prince h3 {
+  #prince h1 {
     -skrollr-animation-name: ten-title-transform; }
 
 #love {
   -skrollr-animation-name: eleven-scroll; }
-  #love h1, #love h2, #love h3 {
+  #love h2 {
     -skrollr-animation-name: eleven-title-transform; }
 
 #end {
   -skrollr-animation-name: last-scroll; }
-  #end h1, #end h2, #end h3 {
+  #end h2 {
     -skrollr-animation-name: last-title-transform; }
 
 @-skrollr-keyframes last-title-transform {
