--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -21,6 +21,11 @@
 
 #howto {
 	margin-top:-5000px;  
+	.factoid {
+    width: 300px;
+    top: 400px;
+    right: 0px; 
+    }
   }
   
 #img-button-hand {  
