--- a/styles/main-noskrollr.css
+++ b/styles/main-noskrollr.css
@@ -547,6 +547,11 @@ a#story-button:active, a#story-button:hover, a#story-button:press, a#story-butto
   top: 100px;
   left: 200px; }
 
+.factoid {
+  position: absolute;
+  min-height: 20px;
+  background-color: #2494d1; }
+
 .back {
   z-index: 1 !important; }
 
@@ -642,6 +647,10 @@ h3 {
 
 #howto {
   margin-top: -5000px; }
+  #howto .factoid {
+    width: 300px;
+    top: 400px;
+    right: 0px; }
 
 #img-button-hand {
   top: 600px;
