--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -21,12 +21,13 @@
 
 #howto {
 	margin-top:-5000px;  
-	.factoid {
+  }
+  
+#factoid01 {
     width: 300px;
     top: 400px;
     right: 0px; 
     }
-  }
   
 #img-button-hand {  
   top: 600px; 
