--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -10,7 +10,7 @@ $page-divider: $page-color-dark;
 $button-color: rgba(36,148,209,1);
 $button-text-color: rgba(36,148,209,1);
 
-$red: rgba(228, 57, 0, 0.8);
+$red: rgba(228,57,0,0.8);
 $blue: rgba(36,148,209,1);
 
 $factoid-color: $red;
@@ -22,3 +22,5 @@ $sans-type: "Helvetica Neue", Helvetica, Arial, serif;
 $serif-type: "Arnhem", Georgia, serif;
 
 $border-radius: 4px;
+
+
