--- a/styles/main.css
+++ b/styles/main.css
@@ -889,7 +889,7 @@ h3 {
     -webkit-transform: rotate(0deg); }
 
   2124 {
-    color: red;
+    color: #e43900;
     transform: rotate(-90deg);
     -webkit-transform: rotate(-90deg); } }
 
